# vicia-db

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PHILOSOPHY.md  Package.swift  README.md  ROADMAP.md  TEST_COVERAGE.md  codecov.yml  coverage-thresholds.toml  justfile
benches/: agent_brief_read_path_benchmark.rs  delta_accumulation_benchmark.rs  minigraf_bench.rs  vetch_cadence_benchmark.rs  vetch_ledger_caller_benchmark.rs
benchmarks/: milestones.json
bindings/browser/: Cargo.toml
bindings/browser/src/: lib.rs
demos/: tutorial_corestore_setup.txt
docs/: A6_SESSION_PROTOCOL_ANSWERS_HARREKKI.md  A6_SESSION_PROTOCOL_QUESTIONS.md  API_COMPATIBILITY_AND_MIGRATION.md  APP_ADOPTION_GAP_PLAN.md  BENCHMARKS.md  BENCHMARK_MILESTONES.md  BUG_OPENPAGED_EXISTING_INDEXEDDB_LIVENESS.md  CROSS_DB_STRESS_BENCHMARK.md  DELTA_INDEX_DESIGN.md  DELTA_INDEX_REFERENCE_SURVEY.md  DURABILITY_AND_CALLER_RULES.md  ERROR_REFERENCE.md  HARREKKI_CALLER_REQUIREMENTS.md  MAINTENANCE_API_CONTRACT.md  PERFORMANCE_ROADMAP.md  REFACTORING_AND_ALGORITHM_PLAN.md  REF_DB_PERFORMANCE_TODO.md  SESSION_PROTOCOL.md  TEST_COVERAGE.md  VETCH_CALLER_REQUIREMENTS.md  VETCH_DELTA_STORAGE_ROADMAP.md  VETCH_HIGH_LEVEL_LEDGER_API_PLAN.md  VICIA_DB_RENAME_PLAN.md
examples/: generate_bench_fixture.rs  generate_gate_e_native_fixture.rs
fuzz/: Cargo.toml
minigraf-ffi/: Cargo.toml
scripts/: analyze-point-path-density.mjs  analyze-storage-layout-variance.mjs  audit-aggregate-retention-validator.mjs  audit-browser-projection-maintenance-validator.mjs  audit-current-projection-validator.mjs  (+68 more)
src/: db.rs  (+7 more)
(+249 files in other folders)
